--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,9 @@ select:focus {
   //border-bottom-left-radius: 0;
   //border-bottom-right-radius: 0;
 }
+select:hover {
+  cursor: pointer;
+}
 
 .wrapper {
   display: flex;
