--- a/src/index.scss
+++ b/src/index.scss
@@ -17,17 +17,19 @@ select:focus {
   //border-bottom-left-radius: 0;
   //border-bottom-right-radius: 0;
 }
-select:hover {
+select:hover, button:hover {
   cursor: pointer;
 }
 
 .wrapper {
+  margin: 0 auto;
+  max-width: 1100px;
+  text-align: center;
+}
+.pokemon-cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0 auto;
-  max-width: 1100px;
-  border: 1px solid white;
 }
 
 .pokemon-card {
@@ -110,6 +112,22 @@ header {
   padding-left: 10px;
   width: 80px;
   height: 50px;
+  border-radius: 8px;
+  border: none;
+}
+
+.skeleton-element {
+  display: inline-block;
+  margin: 15px;
+}
+.skeleton-element.more {
+  margin: 40px 15px 60px 15px;
+}
+.load-more {
+  background-color: #7272ff;
+  color: white;
+  padding: 20px 25px;
+  margin: 40px 0 60px 0;
   border-radius: 8px;
   border: none;
 }
