--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,3 +14,16 @@ body {
 @import "./modal";
 @import "./darkTheme";
 
+@media (max-width: 1050px) {
+  .switch {
+    position: relative;
+    top: auto;
+    right: auto;
+    height: 60px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding-right: 30px; 
+  }
+}
+
