--- a/src/styles/pokemonCards.scss
+++ b/src/styles/pokemonCards.scss
@@ -3,6 +3,7 @@
     margin: 0 auto;
     max-width: 1100px;
     text-align: center;
+    margin-bottom: 50px;
   }
   .pokemon-cards {
     display: flex;
