dark theme body background

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,5 @@
 .container {
-  transition: background-color 0.2s, color 0.2s;
+  //transition: background-color 0.2s, color 0.2s;
 }
 header {
     height: 100px;
